--- a/code/articles.css
+++ b/code/articles.css
@@ -1,5 +1,5 @@
-body,html{ margin:100px 0; color:black; font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif; scroll-behavior: smooth; margin:0; padding:0; font-size:16px; font-weight:500; line-height:150%;  }
-h1{width:690px; margin:0 auto;}
+body,html{ padding:100px 0; color:black; font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif; scroll-behavior: smooth; margin:0; padding:0; font-size:16px; font-weight:500; line-height:150%;  }
+h1{width:690px; margin:0 auto; line-height:115%; }
 #date {width:690px; margin:20px auto 30px auto; opacity:0.5; font-weight:400;}
 p {width:690px; font-weight:400; margin:15px auto; line-height:150%; opacity:0.9; }
 a {text-decoration:underline; color:black;}
