--- a/code/articles.css
+++ b/code/articles.css
@@ -1,10 +1,10 @@
 body,html{ color:black; font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif; scroll-behavior: smooth; margin:0; padding:0; font-size:16px; font-weight:500; line-height:150%;  }
-#titre {width:690px; margin:0 auto; line-height:115%; margin-top:50px;}
-#date {width:690px; margin:20px auto 30px auto; opacity:0.5; font-weight:400;}
-p {width:690px; font-weight:400; margin:15px auto; line-height:150%; opacity:0.9; }
+.article {width:690px; margin:0 auto;}
+#titre {line-height:115%; margin-top:50px;}
+#date {margin-top:20px; margin-bottom:30px; opacity:0.5; font-weight:400;}
+p {font-weight:400; margin-top:15px; margin-bottom:15px; line-height:150%; opacity:0.9; }
 a {text-decoration:underline; color:black;}
-ul {width:690px;}
 
 @media screen and (max-width: 750px) {
-    #titre,#date,p,a,ul {width:90%;}
+    .article {width:90%;}
   }
