--- a/code/articles.css
+++ b/code/articles.css
@@ -1,8 +1,8 @@
-body,html{ color:black; font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif; scroll-behavior: smooth; margin:0; padding:0; font-size:16px; font-weight:500; line-height:150%;  }
+body,html{ color:black; font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif; scroll-behavior: smooth; margin:0; padding:0; font-size:16px; font-weight:400; line-height:150%;  }
 .article {width:690px; margin:0 auto;}
 #titre {line-height:115%; margin-top:50px;}
-#date {margin-top:20px; margin-bottom:30px; opacity:0.5; font-weight:400;}
-p {font-weight:400; margin-top:15px; margin-bottom:15px; line-height:150%; opacity:0.9; }
+#date {margin-top:20px; margin-bottom:30px; opacity:0.5;}
+p {margin-top:15px; margin-bottom:15px; line-height:150%; opacity:0.9; }
 a {text-decoration:underline; color:black;}
 
 @media screen and (max-width: 750px) {
