--- a/code/articles.css
+++ b/code/articles.css
@@ -1,5 +1,7 @@
 body,html{ color:black; font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif; scroll-behavior: smooth; margin:0; padding:0; font-size:16px; font-weight:400; line-height:150%;  }
-.article {width:690px; margin:50px auto;}
+#logo {width:100%; margin:100px 0 50px 0; text-align:center; font-size:18px; font-weight:700; vertical-align:middle; }
+#logo img {width:30px; vertical-align:middle; margin-right:7px;}
+.article {width:650px; margin:0 auto 100px auto;}
 #titre {line-height:115%; font-size:35px; }
 #date {margin-top:15px; margin-bottom:15px; opacity:0.5;}
 img {width:100%; margin:15px 0; }
