--- a/code/articles.css
+++ b/code/articles.css
@@ -3,7 +3,7 @@ body,html{ color:black; font-family: -apple-system, BlinkMacSystemFont, "Segoe U
 #logo a {text-decoration:none; }
 #logo img {width:28px; vertical-align:middle; margin-right:7px;}
 .article {width:650px; margin:0 auto 100px auto;}
-#titre {line-height:115%; font-size:45px; }
+#titre {line-height:115%; font-size:55px; }
 #date {margin-top:15px; margin-bottom:15px; opacity:0.5;}
 img {width:100%; margin:15px 0; }
 p {margin-top:15px; margin-bottom:15px; line-height:150%; opacity:0.9; }
@@ -12,4 +12,5 @@ li {margin:5px 0;}
 
 @media screen and (max-width: 750px) {
     .article {width:87%;}
+    #titre {font-size:35px; }
   }
