--- a/code/articles.css
+++ b/code/articles.css
@@ -1,4 +1,7 @@
-body,html{ color:black; font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif; scroll-behavior: smooth; margin:0; padding:0; font-size:16px; font-weight:400; line-height:150%;  }
+body,html{ color:black; 
+  /* font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif; */
+  font-family: Iowan Old Style, Apple Garamond, Baskerville, Times New Roman, Droid Serif, Times, Source Serif Pro, serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol;
+  scroll-behavior: smooth; margin:0; padding:0; font-size:16px; font-weight:400; line-height:150%;  }
 #logo {width:100%; margin:5px 0 35px 0; text-align:center; font-size:18px; font-weight:700; vertical-align:middle; }
 #logo a {text-decoration:none; }
 #logo img {width:28px; vertical-align:middle; margin-right:7px;}
