--- a/code/articles.css
+++ b/code/articles.css
@@ -1,7 +1,4 @@
-body,html{ color:black; 
-  /* font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif; */
-  font-family: Iowan Old Style, Apple Garamond, Baskerville, Times New Roman, Droid Serif, Times, Source Serif Pro, serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol;
-  scroll-behavior: smooth; margin:0; padding:0; font-size:16px; font-weight:400; line-height:150%;  }
+body,html{ color:black; font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif; scroll-behavior: smooth; margin:0; padding:0; font-size:16px; font-weight:400; line-height:150%;  }
 #logo {width:100%; margin:5px 0 35px 0; text-align:center; font-size:18px; font-weight:700; vertical-align:middle; }
 #logo a {text-decoration:none; }
 #logo img {width:28px; vertical-align:middle; margin-right:7px;}
@@ -9,11 +6,12 @@ body,html{ color:black;
 #titre {line-height:115%; font-size:45px; }
 #date {margin-top:5px; margin-bottom:15px; opacity:0.5;}
 img {width:100%; margin:15px 0; }
-p {margin-top:15px; margin-bottom:15px; line-height:150%; opacity:0.9; }
+p {margin-top:15px; margin-bottom:15px; line-height:150%; opacity:0.9; font-size:18px;  font-family: Iowan Old Style, Apple Garamond, Baskerville, Times New Roman, Droid Serif, Times, Source Serif Pro, serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol; }
 a {text-decoration:underline; color:black;}
 li {margin:5px 0;}
 
 @media screen and (max-width: 750px) {
     .article {width:87%;}
     #titre {font-size:35px; }
+    p {font-size:17px;}
   }
