--- a/code/homepage.css
+++ b/code/homepage.css
@@ -26,13 +26,15 @@ radial-gradient(ellipse at 75% 75%, rgba(111, 0, 167, 0.3) 0% , black 50%);
 /* page articles ------------------------------------------------------------------- */
 #articles {width:100%; background:white; color:black; text-align:center; padding:50px 0; }
 #articles a {color:black;}
-#articles .box {width:600px; margin:0 auto;}
+#articles .box {width:680px; margin:0 auto;}
 #articles .titre {font-size:60px; font-weight:800; line-height:115%; padding-bottom:30px; }
-#articles .article {padding:40px 0; text-align:left; border-bottom:solid 1px rgba(0,0,0,0.1); cursor:pointer; }
+#articles .article { position:relative; padding:40px 0; text-align:left; border-bottom:solid 1px rgba(0,0,0,0.1); cursor:pointer; }
+#articles .article .gauche {width:470px; display:inline-block;}
+#articles .article .image {width:160px; height:107px; background:grey; display:inline-block; position:absolute; top:40px; right:0; border-radius:2px; background-position: center; background-repeat: no-repeat; background-size: cover; }
 #articles .article .titre {font-size:24px; font-weight:800; padding:0; margin:0; line-height:130%; }
-#articles .article .date {margin:5px 0 15px 0; opacity:0.5; font-size:14px; font-weight:400; }
-#articles .article .texte {opacity:0.7; font-size:18px; font-weight:400; line-height:150%; }
-@media screen and (max-width: 650px) {
+#articles .article .date { opacity:0.5; font-size:14px; font-weight:400; }
+#articles .article .texte {margin:10px 0; opacity:0.7; /* font-size:18px;*/ font-weight:400; line-height:150%; }
+@media screen and (max-width: 700px) {
   #articles {padding:20px 0;}
   #articles .box {width:87%;}
   #articles .article .titre {font-size:22px; font-weight:900; }
